@@ -1,5 +1,7 @@
 11 December 2020: Wouter
 	- Fix #371: unbound-control timeout when Unbound is not running.
+	- Fix to squelch permission denied and other errors from remote host,
+	  they are logged at higher verbosity but not on low verbosity.
 
 3 December 2020: Wouter
 	- make depend.
